--- a/forMySelf_blog.html
+++ b/forMySelf_blog.html
@@ -4,15 +4,15 @@
     <title></title>
     <script type="text/javascript" src="resource/js/jquery_1_12_1.js"></script>
     <script type="text/javascript" src="resource/js/jquery_ui.js"></script>
-    <link rel="stylesheet" href="resource/css/jquery_ui.css" />
+    <!--<link rel="stylesheet" href="resource/css/jquery_ui.css" />-->
     <link rel="stylesheet" type="text/css" href="resource/css/common.css">
     <link rel="stylesheet" type="text/css" href="resource/css/page26.css" />
     <!--<link rel="stylesheet" type="text/css" href="resource/css/forMySelf_blog.css">-->
 
 
     <script type="text/javascript" src="resource/js/common.js"></script>
-    <link href="resource/css/bootstrap.min.css" rel="stylesheet">
-    <script src="resource/js/bootstrap.min.js"></script>
+    <!--<link href="resource/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--<script src="resource/js/bootstrap.min.js"></script>-->
 
 
 </head>
