--- a/forMySelf_contact.html
+++ b/forMySelf_contact.html
@@ -8,8 +8,8 @@
             display: block;
         }
     </style>-->
-    <!--<link rel="stylesheet" type="text/css" href="resource/css/forMySelf.css">-->
-    <link rel="stylesheet" href="resource/css/forMySelf_contact.css">
+    <link rel="stylesheet" type="text/css" href="resource/css/forMySelf.css">
+    <!--<link rel="stylesheet" href="resource/css/forMySelf_contact.css">-->
     <link rel="stylesheet" type="text/css" href="resource/css/common.css">
     <script type="text/javascript" src="resource/js/jquery_1_12_1.js"></script>
     <script type="text/javascript" src="resource/js/jquery_ui.js"></script>
@@ -40,26 +40,7 @@
         <div class="content clear">
             <div class="introduction">
                 <p class="title">who we are</p>
-                <p>
-                    we are a team,CSS files
-                    The themes directory (located under development-bundle) contains the CSS files. It
-                    consists of various directories, each containing themes (e.g., the base, smoothness, and
-                    ui-lightness directories). Each theme includes an images directory and other CSS files.
-                    The jquery.ui.core.css file contains basic functionality (required), while other files will
-                    be included only if they are required. The jquery.ui.theme.css file contains the definition
-                    of the theme itself (required).
-                    The jquery.ui.base.css file includes all of the files in the development-bundle directory
-                    except jquery.ui.theme.css. The jquery.ui.all.css file includes all files (that is to say,
-                    jquery.ui.base.css and jquery.ui.theme.css).
-                    Finally, the file ending with custom.css (e.g., jquery-ui-1.8.16.custom.css) includes all
-                    CSS files and eliminates the need to include each separately (it is identical to
-                    jquery.ui.all.css, except that it includes other files via CSS directives, while custom.css
-                    physically includes every line of all files).
-                    Sample HTML page including uncompressed files CSS files
-                    The themes directory (located under development-bundle) contains the CSS files. It
-                    consists of various directories, each containing themes (e.g., the base, smoothness, and
-                    ui-lightness directories). Each theme includes an images directory and other CSS files.
-                </p>
+                <p>{introduction}</p>
             </div>
             <div class="imagemap">
                 <img src="resource/img/forMySelf/Hydrangeas.jpg" class="Hydrangeas" alt="" width="200" height="200" />
@@ -119,5 +100,6 @@
             <div><img alt="here is a picture" class="footerimg" src="resource/img/forMySelf/footer2.png" /></div>
         </div>
     </div>
+    <script type="text/javascript" src="resource/js/forMySelf_contact.js"></script>
 </body>
 </html>
