--- a/forMySelf_blog.html
+++ b/forMySelf_blog.html
@@ -4,17 +4,15 @@
     <title></title>
     <script type="text/javascript" src="resource/js/jquery_1_12_1.js"></script>
     <script type="text/javascript" src="resource/js/jquery_ui.js"></script>
-    <!--<link rel="stylesheet" href="resource/css/jquery_ui.css" />-->
-    <link rel="stylesheet" type="text/css" href="resource/css/common.css">
-    <link rel="stylesheet" type="text/css" href="resource/css/page26.css" />
+    <link rel="stylesheet" href="resource/css/jquery_ui.css" />
     <!--<link rel="stylesheet" type="text/css" href="resource/css/forMySelf_blog.css">-->
 
 
     <script type="text/javascript" src="resource/js/common.js"></script>
-    <!--<link href="resource/css/bootstrap.min.css" rel="stylesheet">-->
-    <!--<script src="resource/js/bootstrap.min.js"></script>-->
-
-
+    <link href="resource/css/bootstrap.min.css" rel="stylesheet">
+    <script src="resource/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="resource/css/page26.css" />
+    <link rel="stylesheet" type="text/css" href="resource/css/common.css">
 </head>
 <body class="blog">
     <div class="container">
@@ -77,13 +75,13 @@
                     </ul>
                 </fieldset>
             </form>
-            <script type="text/javascript" src="resource/js/page26.js"></script>
+
 
         </div>
         <div class="footer" id="footer">
-            <address>Copyright@2016,Written by Belle Yang.</address>
+            <div class="address">Copyright@2016,Written by Belle Yang.</div>
             <div><img alt="here is a picture" class="footerimg" src="resource/img/forMySelf/footer2.png" /></div>
-        </div>
+            </div>
     </div>
     <script type="text/javascript" src="resource/js/page26.js"></script>
 </body>
