--- a/forMySelf_contact.html
+++ b/forMySelf_contact.html
@@ -9,7 +9,7 @@
         }
     </style>-->
     <link rel="stylesheet" type="text/css" href="resource/css/forMySelf.css">
-    <!--<link rel="stylesheet" href="resource/css/forMySelf_contact.css">-->
+    <link rel="stylesheet" href="resource/css/forMySelf_contact.css">
     <link rel="stylesheet" type="text/css" href="resource/css/common.css">
     <script type="text/javascript" src="resource/js/jquery_1_12_1.js"></script>
     <script type="text/javascript" src="resource/js/jquery_ui.js"></script>
